<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".view.activity.MemberManagerViewActivity">

    <include
        layout="@layout/top_bar_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:id="@+id/manager_tv_title"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="18dp"
            android:text=" * 성도/회원을 추가 할 수 있습니다."
            android:textColor="@color/lightGray" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/member_activity_view_et_group"
                                android:layout_width="150dp"
                                android:layout_height="wrap_content"
                                android:clickable="false"
                                android:focusableInTouchMode="false"
                                android:hint="그룹 선택"
                                android:longClickable="false" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/member_activity_view_btn_group"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:layout_marginRight="8dp"
                            android:background="@drawable/ic_settings_24dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/member_activity_view_et_team"
                                android:layout_width="150dp"
                                android:layout_height="wrap_content"
                                android:clickable="false"
                                android:focusableInTouchMode="false"
                                android:hint="소그룹 선택"
                                android:longClickable="false" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/member_activity_view_btn_team"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_settings_24dp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/member_activity_view_imageivew_profile"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_add_a_photo_24dp" />
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/member_activity_view_et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/member_activity_view_et_phone"
                        android:layout_width="222dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/member_activity_view_btn_call"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/ic_contact_phone" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/member_activity_view_et_add"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/address" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/member_activity_view_et_add2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address2" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusableInTouchMode="false"
                android:longClickable="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/member_activity_view_et_gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/gender"
                        android:longClickable="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/member_activity_view_btn_gender"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_settings_24dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/member_activity_view_et_position"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/position"
                        android:longClickable="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/member_activity_view_btn_position"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_settings_24dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusableInTouchMode="false"
                android:longClickable="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/member_activity_view_et_birth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/birth"
                        android:longClickable="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/member_activity_view_btn_birth"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_settings_24dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/member_activity_view_et_new"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/isnew"
                        android:longClickable="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/member_activity_view_btn_new"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_settings_24dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusableInTouchMode="false"
                android:longClickable="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/member_activity_view_et_leader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/leader"
                        android:longClickable="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/member_activity_view_et_isexecutives"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/isexecutives"
                        android:longClickable="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/member_activity_view_btn_isexecutives"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/ic_settings_24dp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="* 인도자를 기입해야 추후 전도/열매통계가 가능합니다."
                android:textColor="@color/lightGray" />
        </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
